# opencam

./: .gitignore  LICENSE  README.md
opencam/: main.py
opencamcpp/: CMakeLists.txt  CMakeUserPresets.json  build_appimage.sh  build_opencv.sh  fedora.sh  main.cpp  opencam.desktop
